# CRATEC

./: .gitignore  404.html  BOX - SATA držáky.stl  BOX - nožičky.stl  BOX - spodek.stl  BOX - strany.stl  BOX - víko.stl  BOX - čelo.stl  LICENSE  README.md  blog.html  docusaurus.config.js  index.html  markdown-page.html  package-lock.json  package.json  sidebars.js  sitemap.xml  svelte.config.js  tailwind.config.ts  vite.config.js
.github/: CODEOWNERS
assets/css/: styles.3f654f8e.css
assets/js/: 01a85c17.11377b3b.js  056ec22b.ed3f2651.js  06803cd9.04645afe.js  0889b9d4.aa4a7d7a.js  0930fe6f.27cefdc6.js  0930fe6f.b0d0142d.js  0bc82b7d.57f9548a.js  0e384e19.365ccb7b.js  0e384e19.aa012287.js  108c4be8.3af1c825.js  14eb3368.6bb10fff.js  17896441.69d87df0.js  17896441.719d42ba.js  18c41134.2bef967f.js  18c41134.33a02711.js  192.198d6170.js  1e4232ab.8a689165.js  1e4232ab.fbdce663.js  1f391b9e.a296095d.js  1f391b9e.ae5a510a.js  2420f0ca.a9ea8d8b.js  2afedfd7.236ba53b.js  3042.b4b3ad47.js  33fc5bb8.95b89bf3.js  341.1cafadcd.js  36994c47.be3532cf.js  393be207.7da55c99.js  393be207.eac66e6c.js  3f45d6d0.cd985e4f.js  42.9eb4d2f7.js  4622.27f3b5ff.js  533a09ca.0528fe5f.js  533a09ca.973c4b82.js  59362658.6eefaf2f.js  5c868d36.48a19e43.js  5c868d36.eafaafee.js  5e95c892.79ef0c03.js  5e95c892.d81f0406.js  621db11d.f71b365d.js  6875c492.22b70702.js  (+46 more)
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
blog/authors/: all-sebastien-lorber-articles.html  yangshun.html
blog/tags/: docusaurus.html  facebook.html  hello.html  hola.html
docs/: intro.html
docs/category/: tutorial---basics.html  tutorial---extras.html
docs/hardware/: box.md  chlazeni.md  dotykovy-displej.md  komponenty.html  komponenty.md  napajeci-zdroj.md  propojovaci-kabely.md  sestaveni.md  zakladni-deska.md
docs/instalace/: aplikace.html  aplikace.md  luks-secureboot.md  os.html  os.md
docs/o-zarizeni/: gui.html  gui.md  nastroje.html  nastroje.md  prehled.html  prehled.md  vykonnove-testy.md
docs/tutorial-basics/: congratulations.html  create-a-blog-post.html  create-a-document.html  create-a-page.html  deploy-your-site.html  markdown-features.html
docs/vyvoj/: lokalni-vyvoj.html  (+1 more)
src/: app.css  app.html  app.postcss  svelte-icons.d.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  database.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  logger.rs  main.rs
src-tauri/src/copy_configs/: mod.rs
src-tauri/src/dashboard_layout/: mod.rs
src-tauri/src/db/: copy_log_scheme.rs  dd_config_scheme.rs  ewf_config_scheme.rs  interface_scheme.rs  logging_scheme.rs  mod.rs  process_log_scheme.rs
src-tauri/src/db_structure/: config_scheme.rs  mod.rs
src-tauri/src/dcfldd/: mod.rs
src-tauri/src/disk_info/: mod.rs
src-tauri/src/disk_manager/: mod.rs
src-tauri/src/disk_utils/: mod.rs
src-tauri/src/ewfacquire/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/initial_setup/: mod.rs
src-tauri/src/integrity_check/: mod.rs
src-tauri/src/led/: mod.rs
src-tauri/src/lockscreen/: mod.rs
src-tauri/src/power_actions/: mod.rs
src-tauri/src/report/: mod.rs
src-tauri/src/report/templates/: en.tex  en_dd.tex  en_ewf.tex
src-tauri/src/system_info/: mod.rs
src-tauri/src/websocket/: mod.rs
(+41 files in other folders)
