[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.0", features = [] }
tokio = "1.38.1"
base64 = "0.22.1"
ring = "0.17.8"
lazy_static = "1.5.0"
thiserror = "1.0.64"
udev = "0.9.0"
itertools = "0.13.0"
sysinfo = "0.29.11"
once_cell = "1.19.0"
flexi_logger = "0.26.0"
log = "0.4.22"
rusqlite = "0.32.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
