[package]
name = "cratec"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.43.0"
base64 = "0.22.1"
ring = "0.17.8"
lazy_static = "1.5.0"
thiserror = "2.0.11"
udev = "0.9.3"
itertools = "0.14.0"
sysinfo = "0.33.1"
once_cell = "1.20.2"
flexi_logger = "0.29.8"
log = "0.4.25"
rusqlite = "0.33.0"


