[package]
name = "cratec"
version = "1.0.0"
description = "Forensic disk imaging tool designed for real-world field use, developed in cooperation with the Czech Police."
authors = ["Martin Sladký"]
license = "MIT"
repository = "https://github.com/cyber-rangers/CRATEC"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }
chrono = { version = "0.4.40", features = ["clock"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.5.0"
base64 = "0.22.1"
ring = "0.17.14"
lazy_static = "1.5.0"
thiserror = "2.0.12"
udev = "0.9.3"
itertools = "0.14.0"
sysinfo = "0.33.1"
once_cell = "1.21.1"
flexi_logger = "0.29.8"
rusqlite = "0.34.0"
tauri-plugin-websocket = "2"
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
regex = "1.11.1"
chrono = { version = "0.4.40", features = ["clock"] }
tauri-plugin-shell = "2.2.1"
printpdf = { version = "0.8.2", features = ["html"] }
serialport = "4.7.1"
tera = "1.20.0"
tectonic = {version = "0.15.0", features = ["external-harfbuzz"] }
uuid = { version = "1.16.0", features = ["v4"] }
radix_fmt = "1.0.0"
hex = "0.4.3"
md5 = "0.7.0"
